--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,6 @@ android:paddingTop="@dimen/activity_vertical_margin" >
     android:layout_height="0dp"
     android:layout_weight=".2" >
 
-
-
-
-
     <Button
         android:id="@+id/number7"
         android:layout_width="0dp"
@@ -68,7 +64,7 @@ android:paddingTop="@dimen/activity_vertical_margin" >
         android:text="@string/button9" />
 
     <Button
-        android:id="@+id/buttonToggleSign"
+        android:id="@+id/plusMinus"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".142"
@@ -178,7 +174,7 @@ android:paddingTop="@dimen/activity_vertical_margin" >
 
 
     <Button
-        android:id="@+id/button0"
+        android:id="@+id/number0"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight=".142"
