--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@ android:paddingTop="@dimen/activity_vertical_margin" >
         android:text="0"
         android:textColor="#ffffff"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="30sp"
-        android:layout_gravity="center_vertical" />
+        android:textSize="30sp" />
 
 
 
