--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,9 @@
 
     </LinearLayout>
 
+
     <LinearLayout
-        android:id="@+id/second"
+        android:id="@+id/third"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".2">
@@ -76,7 +77,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/third"
+        android:id="@+id/fourth"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".2">
@@ -119,7 +120,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/fourth"
+        android:id="@+id/fifth"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".2">
@@ -162,7 +163,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/fifth"
+        android:id="@+id/sixth"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".2">
