--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
 
         <TextView
             android:id="@+id/textView1"
+            android:singleLine="true"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="right"
