--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -5,6 +5,7 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#000000"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
@@ -23,6 +24,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="0"
+            android:textColor="#ffffff"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="30sp" />
     </LinearLayout>
@@ -31,27 +33,27 @@
         android:id="@+id/row2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".16">
+        android:layout_weight=".14">
 
         <Button
             android:id="@+id/buttonClearMemory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonClearMemory" />
 
         <Button
             android:id="@+id/buttonSquareRoot"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonSquareRoot" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button7" />
 
         <Button
@@ -65,21 +67,21 @@
             android:id="@+id/button9"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button9" />
 
         <Button
             android:id="@+id/buttonToggleSign"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonToggleSign" />
 
         <Button
             android:id="@+id/buttonClear"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonClear" />
     </LinearLayout>
 
@@ -87,55 +89,55 @@
         android:id="@+id/row3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".16">
+        android:layout_weight=".14">
 
         <Button
             android:id="@+id/buttonRecallMemory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonRecallMemory" />
 
         <Button
             android:id="@+id/buttonSquared"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonSquared" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button4" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button5" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button6" />
 
         <Button
             android:id="@+id/buttonMultiply"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonMultiply" />
 
         <Button
             android:id="@+id/buttonDivide"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonDivide" />
     </LinearLayout>
 
@@ -143,55 +145,55 @@
         android:id="@+id/row4"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".16">
+        android:layout_weight=".14">
 
         <Button
             android:id="@+id/buttonAddToMemory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonAddToMemory" />
 
         <Button
             android:id="@+id/buttonInvert"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonInvert" />
 
         <Button
             android:id="@+id/button1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button1" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button2" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/button3" />
 
         <Button
             android:id="@+id/buttonAdd"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonAdd" />
 
         <Button
             android:id="@+id/buttonSubtract"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonSubtract" />
     </LinearLayout>
 
@@ -205,28 +207,28 @@
             android:id="@+id/buttonSubtractFromMemory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonSubtractFromMemory" />
 
         <Button
             android:id="@+id/buttonSine"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonSine" />
 
         <Button
             android:id="@+id/buttonCosine"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonCosine" />
 
         <Button
             android:id="@+id/buttonTangent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonTangent" />
 
         <Button
@@ -240,14 +242,14 @@
             android:id="@+id/buttonDecimalPoint"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonDecimalPoint" />
 
         <Button
             android:id="@+id/buttonEquals"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".142"
+            android:layout_weight=".14"
             android:text="@string/buttonEquals" />
     </LinearLayout>
 
